Fix getAllSkills()